--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
     <section id="hero">
         <div class="hero-blob"></div>
         <p class="hero-subtitle">Web Developer</p>
-        <h1 class="hero-title">Hi, I'm <span style="color: var(--primary);">Your Name</span></h1>
-        <p class="hero-description">I create stunning web experiences with attention to detail and focus on user experience. Welcome to my portfolio.</p>
+        <h1 class="hero-title">Hi, I'm <span style="color: var(--primary);">Jitin Kayyala</span></h1>
+        <p class="hero-description">A Sun certified and SC cleared Java developer with over 15 years’ experience in the design, development and maintenance of Web projects using Agile and Waterfall methodologies.</p>
         <a href="#projects" class="btn">View My Work</a>
         <div class="social-links">
             <a href="#" class="social-link">📱</a>
@@ -738,18 +738,17 @@
         </div>
         <div class="about-content">
             <h2 class="section-title">About Me</h2>
-            <p class="about-text">I'm a creative web developer based in [Your Location]. I specialize in building exceptional digital experiences that combine beautiful designs with cutting-edge functionality.</p>
-            <p class="about-text">With over [X] years of experience in the field, I've worked on a wide range of projects, from simple landing pages to complex web applications. I'm passionate about creating intuitive, accessible, and responsive websites that provide value to users.</p>
-            <p class="about-text">When I'm not coding, you can find me [Your Hobbies/Interests].</p>
-            <div class="skills">
-                <div class="skill-tag">HTML</div>
-                <div class="skill-tag">CSS</div>
+            <p class="about-text">I'm a creative web developer based in Sheffield. I specialize in in the design, development and maintenance of Web projects using Agile and Waterfall methodologies.</p>
+            <p class="about-text">With over 15 years of experience in the field, I've worked on a wide range of projects, from simple landing pages to complex web applications. I'm passionate about creating intuitive, accessible, and responsive websites that provide value to users.</p>            <div class="skills">
+                <div class="skill-tag">Java</div>
+                <div class="skill-tag">Spring Boot</div>
                 <div class="skill-tag">JavaScript</div>
                 <div class="skill-tag">React</div>
                 <div class="skill-tag">Node.js</div>
-                <div class="skill-tag">UI/UX Design</div>
-                <div class="skill-tag">Responsive Design</div>
-                <div class="skill-tag">Git</div>
+                <div class="skill-tag">Docker</div>
+                <div class="skill-tag">Kubernetes</div>
+                <div class="skill-tag">Kafka</div>
+                <div class="skill-tag">SQL/NoSql</div>
             </div>
         </div>
     </section>
