--- a/index.html
+++ b/index.html
@@ -722,10 +722,9 @@
         <p class="hero-description">A Sun certified and SC cleared Java developer with over 15 years’ experience in the design, development and maintenance of Web projects using Agile and Waterfall methodologies.</p>
         <a href="#projects" class="btn">View My Work</a>
         <div class="social-links">
-            <a href="#" class="social-link">📱</a>
-            <a href="#" class="social-link">💼</a>
-            <a href="#" class="social-link">🐦</a>
-            <a href="#" class="social-link">📷</a>
+            <a href="tel:07858515748" class="social-link">📱</a>
+            <a href="mailto:jitin.kayyala@gmail.com" class="social-link">💼</a>
+            <a href="https://www.linkedin.com/in/jitin-kayyala/" class="social-link">㏌</a>
         </div>
     </section>
 
@@ -733,7 +732,7 @@
     <section id="about">
         <div class="about-image">
             <div class="about-image-container">
-                <img src="/api/placeholder/400/500" alt="Profile photo">
+                <img src="/images/jitin.png" alt="Profile photo">
             </div>
         </div>
         <div class="about-content">
@@ -749,6 +748,7 @@
                 <div class="skill-tag">Kubernetes</div>
                 <div class="skill-tag">Kafka</div>
                 <div class="skill-tag">SQL/NoSql</div>
+                <div class="skill-tag">AWS</div>
             </div>
         </div>
     </section>
@@ -760,20 +760,22 @@
             <!-- Project 1 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="/api/placeholder/400/200" alt="Project 1">
+                    <img src="/images/passport.png" alt="HMPO">
                 </div>
                 <div class="card-content">
-                    <h3 class="card-title">Project One</h3>
-                    <p class="card-description">A responsive e-commerce website with modern UI/UX design principles and seamless user experience.</p>
+                    <h3 class="card-title">HMPO</h3>
+                    <p class="card-description">Responsible for improving or enhancing the U/X of the website by adding new journeys or modifying existing journey as part of a team in Kainos. Also responsible for improving SQL performance of queries used by Lambda functions for the terminal repository of Passport applications</p>
                     <div class="card-tags">
-                        <span class="card-tag">HTML</span>
-                        <span class="card-tag">CSS</span>
-                        <span class="card-tag">JavaScript</span>
-                        <span class="card-tag">React</span>
-                    </div>
-                    <div class="card-links">
-                        <a href="#" class="card-link primary">View Project</a>
-                        <a href="#" class="card-link secondary">GitHub</a>
+                        <span class="card-tag">Java</span>
+                        <span class="card-tag">SpringBoot</span>
+                        <span class="card-tag">Typescript</span>
+                        <span class="card-tag">GraphQL</span>
+                        <span class="card-tag">AWS</span>
+                        <span class="card-tag">MongoDB</span>
+                        <span class="card-tag">Postgres</span>
+                        <span class="card-tag">Kafka</span>
+                        <span class="card-tag">Docker</span>
+                        <span class="card-tag">Kubernetes</span>
                     </div>
                 </div>
             </div>
@@ -781,20 +783,19 @@
             <!-- Project 2 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="/api/placeholder/400/200" alt="Project 2">
+                    <img src="/images/WorldCheckOne.png" alt="World Check One">
                 </div>
                 <div class="card-content">
-                    <h3 class="card-title">Project Two</h3>
-                    <p class="card-description">A dashboard application with data visualization, user authentication, and real-time updates.</p>
+                    <h3 class="card-title">World Check One</h3>
+                    <p class="card-description">Led a team and was responsible for making changes in the World Check One product of LSEG.</p>
                     <div class="card-tags">
-                        <span class="card-tag">React</span>
-                        <span class="card-tag">Node.js</span>
-                        <span class="card-tag">MongoDB</span>
-                        <span class="card-tag">Chart.js</span>
-                    </div>
-                    <div class="card-links">
-                        <a href="#" class="card-link primary">View Project</a>
-                        <a href="#" class="card-link secondary">GitHub</a>
+                        <span class="card-tag">Java</span>
+                        <span class="card-tag">SpringBoot</span>
+                        <span class="card-tag">AWS</span>
+                        <span class="card-tag">ElasticSearch</span>
+                        <span class="card-tag">MySQL</span>
+                        <span class="card-tag">Kafka</span>
+                        <span class="card-tag">Docker</span>
                     </div>
                 </div>
             </div>
@@ -802,20 +803,17 @@
             <!-- Project 3 -->
             <div class="card">
                 <div class="card-image">
-                    <img src="/api/placeholder/400/200" alt="Project 3">
+                    <img src="/images/insight.png" alt="Insight">
                 </div>
                 <div class="card-content">
-                    <h3 class="card-title">Project Three</h3>
-                    <p class="card-description">A mobile-first web application with offline capabilities and progressive enhancement.</p>
+                    <h3 class="card-title">Insight B2B website</h3>
+                    <p class="card-description">Responsible for integrating third party applications and building services for adding functionality to the website</p>
                     <div class="card-tags">
-                        <span class="card-tag">JavaScript</span>
-                        <span class="card-tag">PWA</span>
-                        <span class="card-tag">Service Workers</span>
-                        <span class="card-tag">IndexedDB</span>
-                    </div>
-                    <div class="card-links">
-                        <a href="#" class="card-link primary">View Project</a>
-                        <a href="#" class="card-link secondary">GitHub</a>
+                        <span class="card-tag">Java</span>
+                        <span class="card-tag">SpringBoot</span>
+                        <span class="card-tag">React</span>
+                        <span class="card-tag">Kafka</span>
+                        <span class="card-tag">Docker</span>
                     </div>
                 </div>
             </div>
@@ -832,44 +830,23 @@
                     <div class="contact-icon">📧</div>
                     <div>
                         <h4>Email</h4>
-                        <p>your.email@example.com</p>
+                        <p>jitin.kayyala@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-method">
                     <div class="contact-icon">📱</div>
                     <div>
                         <h4>Phone</h4>
-                        <p>+1 (123) 456-7890</p>
+                        <p>+44 7858515748</p>
                     </div>
                 </div>
                 <div class="contact-method">
                     <div class="contact-icon">📍</div>
                     <div>
                         <h4>Location</h4>
-                        <p>Your City, Country</p>
+                        <p>Sheffiled, UK</p>
                     </div>
                 </div>
-            </div>
-            <div class="contact-form">
-                <form>
-                    <div class="form-group">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" id="name" class="form-input" placeholder="Your Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" class="form-input" placeholder="your.email@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="subject" class="form-label">Subject</label>
-                        <input type="text" id="subject" class="form-input" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea id="message" class="form-input form-textarea" placeholder="Your Message"></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send Message</button>
-                </form>
             </div>
         </div>
     </section>
@@ -885,12 +862,11 @@
                 <a href="#contact" class="footer-link">Contact</a>
             </div>
             <div class="footer-social">
-                <a href="#" class="social-link">📱</a>
-                <a href="#" class="social-link">💼</a>
-                <a href="#" class="social-link">🐦</a>
-                <a href="#" class="social-link">📷</a>
+                <a href="tel:07858515748" class="social-link">📱</a>
+                <a href="mailto:jitin.kayyala@gmail.com" class="social-link">💼</a>
+                <a href="https://www.linkedin.com/in/jitin-kayyala/" class="social-link">㏌</a>
             </div>
-            <p class="copyright">&copy; 2025 Your Name. All Rights Reserved.</p>
+            <p class="copyright">&copy; 2025 Jitin Kayyala. All Rights Reserved.</p>
         </div>
     </footer>
 
